tests/baselines/reference/typeParameterArgumentEquivalence5.errors.txt
tests/cases/compiler/typeParameterArgumentEquivalence5.ts(4,5): error TS2322: Type '() => (item: any) => T' is not assignable to type '() => (item: any) => U'.
  Type '(item: any) => T' is not assignable to type '(item: any) => U'.
    Type 'T' is not assignable to type 'U'.
tests/cases/compiler/typeParameterArgumentEquivalence5.ts(5,5): error TS2322: Type '() => (item: any) => U' is not assignable to type '() => (item: any) => T'.
  Type '(item: any) => U' is not assignable to type '(item: any) => T'.
    Type 'U' is not assignable to type 'T'.


==== tests/cases/compiler/typeParameterArgumentEquivalence5.ts (2 errors) ====
    function foo<T,U>() {
        var x: () => (item) => U;
        var y: () => (item) => T;
        x = y;  // Should be an error
        ~
!!! error TS2322: Type '() => (item: any) => T' is not assignable to type '() => (item: any) => U'.
!!! error TS2322:   Type '(item: any) => T' is not assignable to type '(item: any) => U'.
!!! error TS2322:     Type 'T' is not assignable to type 'U'.
        y = x;  // Shound be an error
        ~
!!! error TS2322: Type '() => (item: any) => U' is not assignable to type '() => (item: any) => T'.
!!! error TS2322:   Type '(item: any) => U' is not assignable to type '(item: any) => T'.
!!! error TS2322:     Type 'U' is not assignable to type 'T'.
    }
    